# omnigraffle-stencil

./: .gitignore  LICENSE  README.md  pyproject.toml
omnigraffle_stencil/: __main__.py  converter.py
omnigraffle_stencil/templates/: data.plist  sheet.plist
omnigraffle_svg_to_stencil/: __main__.py
templates/: data.plist  image.plist
