[tool.poetry]
name = "omnigraffle-svg-to-stencil"
version = "1.0.0"
description = "Create OmniGraffle stencil from SVG icons"
authors = ["Maciej Radzikowski <maciej@radzikowski.com.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cairosvg = "2.4.2"
PyPDF2 = "1.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
