[tool.poetry]
name = "omnigraffle-stencil"
version = "1.1.0"
description = "Tool to create OmniGraffle stencils from SVG icons"
authors = ["Maciej Radzikowski <maciej@radzikowski.com.pl>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/m-radzikowski/omnigraffle-stencil"
keywords = ["omnigraffle", "stencil", "svg"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion"
]

[tool.poetry.dependencies]
python = "^3.8"
cairosvg = "2.4.2"
PyPDF2 = "1.26.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
omnigraffle-stencil = "omnigraffle_stencil.converter:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
